<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        >
    <item
        android:id="@+id/navigation_home"
        android:title="@string/action_home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/navigation_goal"
        android:title="@string/action_goal"
        android:icon="@drawable/ic_baseline_emoji_events_24"/>
    <item
        android:id="@+id/navigation_info"
        android:title="@string/action_info"
        android:icon="@drawable/ic_baseline_info_24"/>
    <item
        android:id="@+id/navigation_chat"
        android:title="@string/action_chat"
        android:icon="@drawable/ic_baseline_chat_bubble_24"/>
    <item
        android:id="@+id/navigation_set"
        android:title="@string/action_set"
        android:icon="@drawable/ic_baseline_settings_24"/>
</menu>